[tool.poetry]
name = "memetoalt"
version = "0.1.0"
description = ""
authors = ["Connor Guy <connor_guy@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
easyocr = "^1.4.2"
fastai = "^2.6.3"
nltk = "^3.7"
spacy = "3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
